--- a/ECommerce.BackendApis/appsettings.json
+++ b/ECommerce.BackendApis/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ECommerceDB": "Data Source=localhost,1433; Initial Catalog=ECommerce; User ID=SA;Password=Password123"
+  }
 }
