--- a/ECommerce.BackendApis/Properties/launchSettings.json
+++ b/ECommerce.BackendApis/Properties/launchSettings.json
@@ -12,6 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7195;http://localhost:5195",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
