--- a/ECommerce.BackendApis/ECommerce.BackendApis.csproj
+++ b/ECommerce.BackendApis/ECommerce.BackendApis.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Images\Products\" />
+    <Folder Include="wwwroot\Images\products\" />
   </ItemGroup>
 
 </Project>
