--- a/ECommerce.BackendApis/appsettings.json
+++ b/ECommerce.BackendApis/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ECommerceDB": "Data Source=localhost, 1433; Initial Catalog=ECommerce; User ID=SA;Password=Password123"
+  },
+  "Tokens": {
+    "Key": "0123456789ABCDEF",
+    "Issuer": "test.com"
   }
 }
