handling identity server configuration

--- a/ECommerce.BackendApis/appsettings.Development.json
+++ b/ECommerce.BackendApis/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AuthorityUrl": "https://localhost:7195"
 }
