--- a/ECommerce.AdminApp/ECommerce.AdminApp.csproj
+++ b/ECommerce.AdminApp/ECommerce.AdminApp.csproj
@@ -26,6 +26,11 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ECommerce.BackendApis\ECommerce.BackendApis.csproj" />
+    <ProjectReference Include="..\ECommerce.IdentityServer\ECommerce.IdentityServer.csproj" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
