--- a/ECommerce.AdminApp/ECommerce.AdminApp.csproj
+++ b/ECommerce.AdminApp/ECommerce.AdminApp.csproj
@@ -31,6 +31,10 @@
     <ProjectReference Include="..\ECommerce.IdentityServer\ECommerce.IdentityServer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\src\components\app\" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
