--- a/ECommerce.AdminApp/package.json
+++ b/ECommerce.AdminApp/package.json
@@ -40,6 +40,8 @@
     "@emotion/styled": "^11.8.1",
     "@faker-js/faker": "^6.0.0-alpha.7",
     "@iconify/react": "^3.1.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.5.0",
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.4",
     "@mui/utils": "^5.4.2",
