--- a/ECommerce.BackendApis/ECommerce.BackendApis.csproj
+++ b/ECommerce.BackendApis/ECommerce.BackendApis.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\ECommerce.DataAccess\ECommerce.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\user-content\product\" />
+  </ItemGroup>
+
 </Project>
