basic complete customer page

--- a/ECommerce.BackendApis/ECommerce.BackendApis.csproj
+++ b/ECommerce.BackendApis/ECommerce.BackendApis.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ECommerce.ApiItegration\ECommerce.ApiItegration.csproj" />
     <ProjectReference Include="..\ECommerce.DataAccess\ECommerce.DataAccess.csproj" />
   </ItemGroup>
 
